--- a/webapp/src/app/app.component.html
+++ b/webapp/src/app/app.component.html
@@ -1,6 +1,3 @@
-<p>app components</p>
-@if (gitRepos !== undefined) {
-    @for(repo of gitRepos; track repo.id ) {
-        <p><a [href]="repo.html_url">{{repo.name }}</a> is private: {{ repo.private }} </p>
-    }
-}
+<div>
+    <router-outlet />
+</div>
