--- a/webapp/src/app/repo/commit-select/commit-select.component.html
+++ b/webapp/src/app/repo/commit-select/commit-select.component.html
@@ -2,4 +2,6 @@
     @for(commit of commits; track commit.node_id ) {
         <p>commit message: {{commit.message }} from {{ commit.date }} by {{ commit.author_name }} </p>
     }
-}
+
+    <button (click)="watchRepo()">Watch this repository</button>
+} 
