added some basic styling. create project list show repos that aren't in a project. updated project service to keep loaded project list.

--- a/webapp/src/app/projects/commit-list/commit-list.component.html
+++ b/webapp/src/app/projects/commit-list/commit-list.component.html
@@ -1,3 +1,4 @@
+<h2>Commit Messages</h2>
 @if (commits !== undefined) {
     @for(commit of commits(); track commit.node_id ) {
         <p>commit message: {{commit.commit.message }} from {{ commit.commit.author.date }} by {{ commit.commit.author.name }} </p>
