--- a/webapp/src/app/projects/projects.component.html
+++ b/webapp/src/app/projects/projects.component.html
@@ -1,11 +1,13 @@
+    <h3>Project List</h3>
 @if (projects == undefined || projects.length==0) {
     <p>You don't have any project. Do you want to <a [routerLink]="'/create-project'"> create one from </a>a repository?</p>
 }
 @else {
-    <h3>Projects</h3>
+    <ul>
      @for(project of projects; track project.id ) {
         <!-- <p><a [routerLink]="['/repo', repo.projectName]" >{{repo.projectName }}</a> is private: {{ repo.repoIsPrivate ? 'true' : 'false' }} </p> -->
-         <p>{{project.name }} :  {{ project.description }} </p>
+         <ul> <span class="ul-link">{{project.name }}</span>:  {{ project.description }} </ul>
     }
+    </ul>
     <p> <a [routerLink]="'/create-project'">Create a project</a></p>
 }
