--- a/webapp/src/app/projects/view-project/view-project.component.html
+++ b/webapp/src/app/projects/view-project/view-project.component.html
@@ -1,3 +1,3 @@
 <h1>View Project</h1>
-<p>{{ project().name }}</p>
-<p>Description: {{ project().description }} </p>
+<p>{{ project?.name }}</p>
+<p>Description: {{ project?.description }} </p>
