created services for project. added commits as initial project events updated view to show basic project info

--- a/webapp/src/app/projects/view-project/view-project.component.html
+++ b/webapp/src/app/projects/view-project/view-project.component.html
@@ -1,3 +1,7 @@
 <h1>View Project</h1>
 <p>{{ project?.name }}</p>
 <p>Description: {{ project?.description }} </p>
+<p>Created at: {{ project?.createdAt | date:'short' }}</p>
+<p>Repository: <a [href]="project?.repo?.url" target="_blank">{{ project?.repo?.name }}</a></p> 
+
+<p>view the events</p>
