back end REST is feature complete for now. not all tested. project container should have userid partition (or a different container name) upgraded ts to 5.8 ahead of angular 20 upgrade.

--- a/webapp/src/app/projects/view-project/view-project.component.html
+++ b/webapp/src/app/projects/view-project/view-project.component.html
@@ -4,4 +4,5 @@
 <p>Created at: {{ project?.createdAt | date:'short' }}</p>
 <p>Repository: <a [href]="project?.repo?.url" target="_blank">{{ project?.repo?.name }}</a></p> 
 
-<p>view the events</p>
+ <app-view-project-events [projectId]="projectId()" />
+
