--- a/webapp/src/app/projects/create-project/create-project.component.html
+++ b/webapp/src/app/projects/create-project/create-project.component.html
@@ -4,7 +4,7 @@
 } @else {
 
 <div class="repo-list">
-     <h2>avaialable repositiories</h2>
+     <h2>available repositories</h2>
 @if (gitRepos !== undefined) {
     <ul>
     @for(repo of gitRepos; track repo.id ) {
@@ -13,9 +13,9 @@
     </ul>
 }
 @else {
-    <p>No repositiories avaialable, create a new project.</p>
+    <p>No repositories available, create a new project.</p>
 }
-  
+
   <div class="project-form">
     <div>
         <label for="projectName">Project name:</label>
@@ -30,13 +30,13 @@
         <label for="chk-events">Use commits messages to create inital proejct events</label>
     </div>
   </div>
-  
+
   <p>
     <!-- if no repos, then use a class to make the project button disabled -->
         <button (click)="createProject()" [disabled]="selectedRepo === undefined">create a new project</button>
         <button (click)="location.back()">Cancel</button>
     </p>
-    </div> 
+    </div>
  <div class="commit-list">
 @if (gitCommits !== undefined) {
     <app-commit-list [commits]="gitCommits" />
