--- a/webapp/src/app/projects/projects.component.html
+++ b/webapp/src/app/projects/projects.component.html
@@ -2,7 +2,7 @@
     @if (isLoading) {
        <div class="spinner-container">
         <div class="spinner"></div>
-        <p>Loading repositories...</p>
+        <p>Loading projects...</p>
     </div>
     }
 @else if (projects.length==0) {
