--- a/webapp/src/app/projects/projects.component.css
+++ b/webapp/src/app/projects/projects.component.css
@@ -1,7 +1,4 @@
-.ul-link {
-    text-decoration:  underline;
-    cursor: pointer;
-}
+
 .spinner-container {
   display: flex;
   flex-direction: column;
@@ -22,4 +19,51 @@
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
+}
+
+h3 {
+    margin: 0.5rem;
+    padding: 0;
+}
+
+.project-list {
+   /*background-color: green;*/
+    padding: 0;
+    margin: 0.5rem;
+    box-sizing: border-box;
+    border-radius: 0.4rem;
+    /*border: 1px solid #ccc;*/
+}
+
+.project-item {
+    /*background-color: lightgreen;*/
+    padding: 0;
+    margin: 0.5rem;
+    box-sizing: border-box;
+    /*border-radius: 0.4rem;*/
+    /*border: 1px solid #ccc;*/
+}
+.project-item > * {
+    margin: 0.2rem;
+    display: inline-block;
+}
+
+.link {
+    text-decoration: none;
+    font-weight: bold;
+    /*color: black;*/
+    cursor: pointer;
+}
+.archive {
+    display: none;
+    font-size: 0.8rem;
+}
+
+.show {
+    display: inline;
+}
+
+.new-project {
+    margin: 0.5rem;
+    padding: 0.5rem;
 }
