--- a/webapp/src/app/projects/view-project/view-project.component.css
+++ b/webapp/src/app/projects/view-project/view-project.component.css
@@ -1,8 +1,31 @@
 .event-list {
-    display: flex;
-    flex-direction: column;
+
     /*align-items: center;*/
     margin: 0.5rem auto;
     width: 80%;
     /*height: 100vh;*/
+}
+
+.project-actions {
+    margin: 0.5rem;
+    padding: 0.2rem;
+}
+p {
+    padding: 0 0.3rem;
+    margin: 0.5rem;
+}
+button {
+    font: inherit;
+    cursor: pointer;
+    border: none;
+    padding: 0.3rem 0.3rem;
+    border-radius: 4px;
+    background-color: brown;
+    color: white;
+    margin: auto  0.5rem;
+}
+.disabled {
+    background-color: bisque;
+    color: darkgray;
+    cursor: not-allowed;
 }
