added toast component. added drag and drop feature. made add item a sticky div. added edit item feature for description. many more features.

--- a/webapp/src/app/projects/create-project/create-project.component.css
+++ b/webapp/src/app/projects/create-project/create-project.component.css
@@ -1,5 +1,5 @@
 li {
-    text-decoration: underline;
+
     cursor: pointer;
 }
 
@@ -22,6 +22,19 @@ vertical-align : top;
   width: 45%;
   padding: 0;
   vertical-align: top;
+}
+
+label {
+    font-weight: bold;
+    font-family: inherit;
+    margin: 0.5rem;
+
+}
+
+input, textarea {
+    font: inherit;
+    background: white;
+    margin: 0.5rem;
 }
 
 button {
