--- a/webapp/src/app/projects/commit-list/commit-list.component.html
+++ b/webapp/src/app/projects/commit-list/commit-list.component.html
@@ -1,7 +1,7 @@
 <h2>Commit Messages</h2>
 @if (commits !== undefined) {
     @for(commit of commits(); track commit.node_id ) {
-        <p>commit message: {{commit.commit.message }} from {{ commit.commit.author.date }} by {{ commit.commit.author.name }} </p>
+        <div><strong>{{ commit.commit.author.date |date: 'short' }}:</strong> {{commit.commit.message }}  </div>
     }
 
-} 
+}
