--- a/webapp/src/app/projects/view-project/view-project-event/view-project-event.component.html
+++ b/webapp/src/app/projects/view-project/view-project-event/view-project-event.component.html
@@ -1,8 +1,21 @@
 <div class="event-item" >
     <div class="event-date">{{ event().eventDate|  date:'short' }}</div>
-    <div class="desc" draggable="true" (dblclick)="editDescription()" [class.new-event]="event().isNewEvent" (mouseenter)="onMouseEnter()">{{ event().eventDescription }}</div>
+    <div class="desc"
+         draggable="true"
+         (dblclick)="showEditDialog()"
+         (dragstart)="onDragStart($event)"
+         (dragover)="onDragOver($event)"
+         (drop)="onDrop($event)"
+         (dragend)="onDragEnd($event)"
+         [class.new-event]="event().isNewEvent"
+         (mouseenter)="onMouseEnter()">
+        {{ event().eventDescription }}
+    </div>
 <!--    <div class="event-actions">-->
 <!--        <button [disabled]="!canDelete()" (click)="delete.emit()">del</button>-->
 <!--    </div>-->
 
 </div>
+@if(showEdit()) {
+    <app-edit-item  [description]="event().eventDescription" (close)="updateEventDesc($event)"></app-edit-item>
+}
