many updates. added mapstruct support for DTO and entity mapping. refactored create project to have initial events in the post and not creating them on the back end. fixed GitHub commit api call to care for pagination and iterate over the pages. updated the new item styling

--- a/webapp/src/app/projects/view-project/view-project-event/view-project-event.component.html
+++ b/webapp/src/app/projects/view-project/view-project-event/view-project-event.component.html
@@ -1,7 +1,7 @@
 <div class="event-item" >
     <div class="event-date">{{ event().eventDate|  date:'short' }}</div>
     <div class="desc"
-         draggable="true"
+         [draggable]="editable()"
          (dblclick)="showEditDialog()"
          (dragstart)="onDragStart($event)"
          (dragover)="onDragOver($event)"
@@ -9,11 +9,11 @@
          (dragend)="onDragEnd($event)"
          [class.new-event]="event().isNewEvent"
          (mouseenter)="onMouseEnter()">
+         @if(event().isNewEvent) {
+        <div class="new-event-label">(new)</div>
+         }
         {{ event().eventDescription }}
     </div>
-<!--    <div class="event-actions">-->
-<!--        <button [disabled]="!canDelete()" (click)="delete.emit()">del</button>-->
-<!--    </div>-->
 
 </div>
 @if(showEdit()) {
