--- a/webapp/src/app/projects/view-project/view-project-event/view-project-event.component.css
+++ b/webapp/src/app/projects/view-project/view-project-event/view-project-event.component.css
@@ -20,9 +20,19 @@
 }
 
 .new-event {
-    /*border: 1px solid #ccc;*/
-    box-shadow: 0 0 10px #ccc;
-    background: brown;
+    /* border:2px solid chocolate; */
+    box-shadow: 0 0 10px chocolate;
+    font-weight: bold;
+    color:white
+}
+
+.new-event-label {
+    display: inline-block;
+    color: darkgreen;
+    background:  lawngreen;
+    border-radius: 4px;
+    font-size: 0.8rem;
+    font-variant: small-caps;
 }
 
 .event-actions {
