created component for add new event cleaned up some code added loading spinners to create project and when deleting a project.

--- a/webapp/src/app/projects/create-project/create-project.component.html
+++ b/webapp/src/app/projects/create-project/create-project.component.html
@@ -1,6 +1,9 @@
 <h3>Select a repository to create a project from it</h3>
-@if (isLoading) {
-    <p>Loading repositories...</p>
+@if (isLoading()) {
+    <div class="spinner-container">
+        <div class="spinner"></div>
+        <p>Creating project...</p>
+    </div>
 } @else {
 
 <div class="repo-list">
