--- a/webapp/src/app/projects/view-project/view-project.component.html
+++ b/webapp/src/app/projects/view-project/view-project.component.html
@@ -1,4 +1,10 @@
 <h1>Project Details</h1>
+@if (isLoading()) {
+    <div class="spinner-container">
+        <div class="spinner"></div>
+        <p>Loading project...</p>
+    </div>
+}
 @if (project !== null) {
     <app-view-project-details [project]="project"  (updated)="handleSubmit($event)" (delete)="onDeleteProject()"/>
 }
@@ -10,21 +16,14 @@
     </h3>
     </div>
 <div class="event-list">
-    <div class="new-event">
-        <input [disabled]="!editable()" type="date" [(ngModel)]="newEventDate" />
-        <input [disabled]="!editable()" type="time" [(ngModel)]="newEventTime" />
-        <textarea [disabled]="!editable()" cols="75" rows="3" [(ngModel)]="newEventDescription" placeholder="Enter new event description"></textarea>
-        <button  [class.disabled]="!canAdd()" [disabled]="!canAdd()" (click)="onAdd()">Add new event</button>
-    </div>
+    <app-add-event [editable]="editable()" (create)="onAddEvent($event)" ></app-add-event>
+
     @for (event of sortedEvents(); track event.id) {
-<!--        @if ($first) {-->
-<!--            <svg (click)="changeSort()" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-up-down-icon lucide-arrow-up-down"><path d="m21 16-4 4-4-4"/><path d="M17 20V4"/><path d="m3 8 4-4 4 4"/><path d="M7 4v16"/></svg>-->
-<!--        }-->
         <app-view-project-event
             [canDelete]="project?.status == 'active'"
             [event]="event"
             [editable]="editable()"
-            (delete)="onDelete(event)"
+            (delete)="onDeleteEvent(event)"
             (value)="updateEventDesc($event, event)"
             (visited)="onVisited(event)"/>
     }
