--- a/webapp/src/app/projects/create-project/create-project.component.css
+++ b/webapp/src/app/projects/create-project/create-project.component.css
@@ -14,6 +14,10 @@ li {
   margin: 0.5rem 0;
 }
 
+.project-form {
+    overflow: hidden;
+}
+
 .commit-list {
   display: inline-block;
   width: 45%;
