refactored create project. created component for the repository selection. created a component for the create form. change the layout of the create page and added flex box styling

--- a/webapp/src/app/projects/commit-list/commit-list.component.css
+++ b/webapp/src/app/projects/commit-list/commit-list.component.css
@@ -1,3 +1,20 @@
-div {
-    margin: 0.5rem;
+:host {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    overflow: auto;
+    align-content: space-between;
 }
+
+/*.commit-item {*/
+/*    display: flex;*/
+/*    flex-direction: row;*/
+/*    padding: 0.5rem;*/
+/*}*/
+
+/*.commit-date {*/
+/*    padding: 0.5rem;*/
+/*    font-weight: bold;*/
+/*    flex: 0 0 auto;*/
+/*}*/
+
