--- a/webapp/src/app/projects/create-project/create-project-form/create-project-form.component.css
+++ b/webapp/src/app/projects/create-project/create-project-form/create-project-form.component.css
@@ -1,21 +1,10 @@
 
-.create-project {
-    display: flex;
-}
-
-
-
-
-.project-form {
-    overflow: hidden;
-}
-
-
-
 label {
     font-weight: bold;
     font-family: inherit;
     margin: 0.5rem;
+    vertical-align: top;
+    padding: 0.5rem;
 }
 
 input, textarea {
