updated the README.md for the one month in update. added some html explanations and a little clean up removed the reop and branch info from the commit event message. wasn't being used.

--- a/webapp/src/app/projects/create-project/create-project-form/create-project-form.component.html
+++ b/webapp/src/app/projects/create-project/create-project-form/create-project-form.component.html
@@ -1,11 +1,11 @@
 <div class="project-form">
     <div>
         <label for="projectName">Project name:</label>
-        <input type="text" id="projectName" placeholder="Enter project name" [(ngModel)]="name"/>
+        <input type="text" id="projectName" placeholder="Enter project name" [(ngModel)]="name"  autocomplete="off"/>
     </div>
     <div>
         <label for="projectDescription">Project description:</label>
-        <textarea cols="50" rows="3" id="projectDescription" placeholder="Enter project description"
+        <textarea cols="50" rows="3" id="projectDescription" placeholder="Enter project description" autocomplete="off"
                   [(ngModel)]="description"></textarea>
     </div>
     <div>
