--- a/webapp/src/app/projects/projects.component.html
+++ b/webapp/src/app/projects/projects.component.html
@@ -1,4 +1,7 @@
-    <h3>Project List:</h3>
+<h1>My GitHub Project - POC</h1>
+<p>A small proof of concept project to learn some new things and in the course of that effort capture git commit messages to automate part of a development log
+on a per-project (repository) basis. Designed for a single developer usage (i.e. me).</p>
+<h3>Project List:</h3>
     @if (isLoading) {
        <div class="spinner-container">
         <div class="spinner"></div>
