--- a/webapp/src/app/projects/view-project/view-project-details/view-project-details.component.html
+++ b/webapp/src/app/projects/view-project/view-project-details/view-project-details.component.html
@@ -1,11 +1,11 @@
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
     <div class="form-item">
         <label for="name">Name:</label>
-        <input id="name" name="name" type="text" formControlName="projectName" placeholder="Enter project name">
+        <input id="name" name="name" type="text" formControlName="projectName" placeholder="Enter project name" autocomplete="off">
     </div>
     <div class="form-item">
         <label for="description">Description:</label>
-        <textarea rows="3" cols="75" id="description" name="description" formControlName="projectDescription"></textarea>
+        <textarea rows="3" cols="75" id="description" name="description" formControlName="projectDescription" autocomplete="off"></textarea>
     </div>
 
     <div class="control-row">
@@ -42,7 +42,7 @@
     <div class="project-actions">
         <button [disabled]="isArchived()" [class.disabled]="isArchived()" type="submit">Save Project</button>
         <button [disabled]="!isArchived()" [class.disabled]="!isArchived()" (click)="delete.emit()" type="button">Delete project</button>
-        <p>An archived project cannot be updated anymore. A project can only be deleted after it is archived.</p>
+        <p class="help">An archived project cannot be updated anymore. A project can only be deleted after it is archived.</p>
     </div>
 </form>
 
