added an about section created a toggle component made the create project page slightly responsive for phones hopefully fixed whitelabel error for serving angular content

--- a/webapp/src/app/projects/create-project/create-project.component.css
+++ b/webapp/src/app/projects/create-project/create-project.component.css
@@ -3,7 +3,11 @@
     display: flex;
 }
 
-
+@media (max-width: 600px) {
+    .create-project {
+        flex-direction: column;
+    }
+}
 
 
 .project-form {
